force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/geopointe__GP_Route_Plan_Configuration__c.object-meta.xml
<CustomObject>
    <label>Geopointe Route Plan Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Route Plan Configurations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>