force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Completed_Child_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Completed_Child_Relationship_Name__c</fullName>
    <label>Completed Child Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>