force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Completed_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Completed_Filter_Logic__c</fullName>
    <description>Stores the AND/OR filter logic for queries, eg: 1 AND (2 OR 3)</description>
    <label>Completed Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>