force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Completed_When_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Completed_When_Field__c</fullName>
    <inlineHelpText>Name of lookup field to when the visit occurred</inlineHelpText>
    <label>Completed When Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>