force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Completed_Who_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Completed_Who_Field__c</fullName>
    <inlineHelpText>Name of lookup field to who visited the location</inlineHelpText>
    <label>Completed Who Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>