force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Create_Routes__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Create_Routes__c</fullName>
    <label>Create Geopointe Routes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>User Controlled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>