force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__End_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__End_Date__c</fullName>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>