force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__End_Of_Lunch__c.field-meta.xml
<CustomField>
    <fullName>geopointe__End_Of_Lunch__c</fullName>
    <label>Business Lunch End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>