force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Freq_Num_Time_Units__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Freq_Num_Time_Units__c</fullName>
    <label>Target Frequency - # Time Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>