force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Freq_Num_Visits_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Freq_Num_Visits_Field__c</fullName>
    <inlineHelpText>Name of field to use to override Target Freq # Visits</inlineHelpText>
    <label>Target Frequency - # Visits Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>