force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Freq_Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Freq_Time_Unit__c</fullName>
    <label>Target Frequency - Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>day</fullName>
            </value>
            <value>
                <fullName>week</fullName>
                <default>true</default>
                <label>week</label>
            </value>
            <value>
                <fullName>month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>