force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Include_Poor_Quality_Geocodes__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Include_Poor_Quality_Geocodes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Poor Quality Geocodes</label>
    <type>Checkbox</type>
</CustomField>