force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Location_Filters__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Location_Filters__c</fullName>
    <description>Holds configuration for filters for Data Sets.</description>
    <label>Location Filters</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>