force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Map_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Object__c</fullName>
    <inlineHelpText>The API name of the map object this Route Plan uses.</inlineHelpText>
    <label>Map Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>