force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Map_Object_User_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Object_User_Field__c</fullName>
    <label>Map Object User Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>