force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Number_of_Route_Plan_Users__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Number_of_Route_Plan_Users__c</fullName>
    <label>User Count</label>
    <summaryForeignKey>geopointe__GP_Route_Plan_User__c.geopointe__Route_Plan_Configuration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>