force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Optimization_Last_Run__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Optimization_Last_Run__c</fullName>
    <label>Optimization Last Run</label>
    <type>Date</type>
</CustomField>