force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Optimization_Time__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Optimization_Time__c</fullName>
    <label>Optimization Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>