force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Optimization_Week_Day__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Optimization_Week_Day__c</fullName>
    <label>Optimization Week Day</label>
    <length>100</length>
    <type>Text</type>
</CustomField>