force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Scheduled_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Scheduled_Name__c</fullName>
    <inlineHelpText>What to name the scheduled visit records</inlineHelpText>
    <label>Scheduled Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>