force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Scheduled_Route_Plan_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Scheduled_Route_Plan_Field__c</fullName>
    <inlineHelpText>Name of Route Plan lookup field</inlineHelpText>
    <label>Scheduled Route Plan Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>