force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Scheduled_Start_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Scheduled_Start_Field__c</fullName>
    <inlineHelpText>Name of datetime field in which to save the visit start time</inlineHelpText>
    <label>Scheduled Start Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>