force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Scheduled_When_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Scheduled_When_Field__c</fullName>
    <inlineHelpText>Name of date field in which to save the date of the visit</inlineHelpText>
    <label>Scheduled When Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>