force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Scheduled_Who_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Scheduled_Who_Field__c</fullName>
    <inlineHelpText>Name of User lookup field in which to save who is doing the visit</inlineHelpText>
    <label>Scheduled Who Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>