force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Use_Location_Visit_Hours__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Use_Location_Visit_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Location Visit Hours</label>
    <type>Checkbox</type>
</CustomField>