force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Visit_Buffer__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Visit_Buffer__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Visit Buffer (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>