force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Visit_Duration__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Visit Duration (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>