force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/fields/geopointe__Visit_Duration_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Visit_Duration_Field__c</fullName>
    <inlineHelpText>Name of field to use to override Visit Duration</inlineHelpText>
    <label>Visit Duration Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>