force-app/main/default/objects/geopointe__GP_Route_Plan_Configuration__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Start_Date__c</columns>
    <columns>geopointe__End_Date__c</columns>
    <columns>geopointe__Status__c</columns>
    <columns>geopointe__Map_Object__c</columns>
    <columns>geopointe__Number_of_Route_Plan_Users__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>